@@ -40,7 +40,6 @@ import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.security.SecureRandom;
 import java.sql.Driver;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -50,6 +49,7 @@ import java.util.stream.Collectors;
 import static com.dbn.common.util.JdbcUrls.redactSensitiveParameters;
 import static com.dbn.common.util.Messages.options;
 import static com.dbn.common.util.Messages.showErrorDialog;
+import static com.dbn.common.util.Passwords.clearPassword;
 import static com.dbn.diagnostics.Diagnostics.conditionallyLog;
 import static com.dbn.mcp.build.McpJavaVersionManager.MIN_JAVA_VERSION;
 import static com.dbn.mcp.build.McpMavenPluginSupport.verifyMavenAvailability;
@@ -153,7 +153,7 @@ public class McpBuildTask {
 
     private void verifyConnectionUrl() {
         try {
-            resolveConnectionUrl(); // fail fast before any dialog or file writing
+            getRedactedConnectionUrl(); // fail fast before any dialog or file writing
         } catch (UnsupportedOperationException e) {
             showErrorDialog(project, txt("msg.mcp.title.McpBuildError"), e);
             cancelProcess();
@@ -190,7 +190,7 @@ public class McpBuildTask {
             Path configFile = baseDirectory.resolve(CONFIG);
 
             Files.createDirectories(baseDirectory);
-            Files.write(configFile, yaml.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(configFile, yaml, StandardCharsets.UTF_8);
 
             result.setBaseDirectory(baseDirectory);
             result.setConfigFile(configFile);
@@ -222,7 +222,7 @@ public class McpBuildTask {
                 : Paths.get(System.getProperty("user.home"));
     }
 
-    private String resolveConnectionUrl() {
+    private String getRedactedConnectionUrl() {
         ConnectionDatabaseSettings databaseSettings = connection.getSettings().getDatabaseSettings();
         DatabaseInfo info = connection.getDatabaseInfo();
         DatabaseUrlType urlType = info.getUrlType();
@@ -270,6 +270,10 @@ public class McpBuildTask {
     }
 
     private String buildYaml() {
+        return buildYaml(definition, getRedactedConnectionUrl());
+    }
+
+    static String buildYaml(McpServerDefinition definition, String connectionUrl) {
         @NonNls
         StringBuilder sb = new StringBuilder();
 
@@ -278,7 +282,7 @@ public class McpBuildTask {
         sb.append('\n');
 
         sb.append("dataSource:\n");
-        appendYamlField(sb, "  ", "url", resolveConnectionUrl());
+        appendYamlField(sb, "  ", "url", redactSensitiveParameters(connectionUrl));
         sb.append("  # username: YOUR_USER  # uncomment to override wallet credentials\n");
         sb.append("  # password: YOUR_PASS  # uncomment to override wallet credentials\n");
         sb.append('\n');
@@ -386,7 +390,7 @@ public class McpBuildTask {
         Files.createDirectories(walletDir);
 
         char[] user = safe(connection.getUserName()).toCharArray();
-        char[] pwd = getPassword(connection);
+        char[] password = getPassword(connection);
 
         // Random password — used only to create ewallet.p12, never stored or shown.
         // cwallet.sso (used at runtime) needs no password.
@@ -401,7 +405,7 @@ public class McpBuildTask {
             OracleSecretStore store = wallet.getSecretStore();
             // Use documented default SEPS keys to avoid connect-string lookup mismatches.
             store.setSecret(DEFAULT_SEPS_USERNAME, user);
-            store.setSecret(DEFAULT_SEPS_PASSWORD, pwd);
+            store.setSecret(DEFAULT_SEPS_PASSWORD, password);
             wallet.setSecretStore(store);
 
             wallet.save();
@@ -413,9 +417,9 @@ public class McpBuildTask {
                     : e.getClass().getSimpleName();
             throw new IOException(txt("msg.mcp.exception.OracleSepsWalletCreationFailed", message), e);
         } finally {
-            Arrays.fill(walletPassword, '\0');
-            Arrays.fill(user, '\0');
-            Arrays.fill(pwd, '\0');
+            clearPassword(user); // TODO do we need this?
+            clearPassword(password);
+            clearPassword(walletPassword);
         }
     }
 
@@ -506,8 +510,8 @@ public class McpBuildTask {
         return pwd != null ? pwd.clone() : new char[0];
     }
 
-    private String safe(String v) { return v != null ? v : ""; }
-    private String safe(String v, String d) { return v != null && !v.isEmpty() ? v : d; }
+    private static String safe(String v) { return v != null ? v : ""; }
+    private static String safe(String v, String d) { return v != null && !v.isEmpty() ? v : d; }
 
     private String buildClaudeJson(String name, String jar) {
         String command;
